# TestingOfClustering

./: .gitignore  CMakeLists.txt  README.md  generate_data.py  main.cpp  process_result.py
algo/: CMakeLists.txt  euclidean_center.cpp  euclidean_center.h  sampling.h
experiment_configs/: Diam_L2_k=1_D=2.json  Diam_L2_k=1_D=2_ver2.json  Diam_L2_k=2_D=2.json  Diam_L2_k=2_D=2_ver2.json  Diam_L2_k=3_D=2.json  Radius_L2_k=1_D=2.json  Radius_L2_k=1_D=2_ver2.json  Radius_L2_k=2_D=2.json  Radius_L2_k=2_D=2_ver2.json  example.json
experiment_logs/Diam_L2_k=1_D=2/: log.txt
experiment_logs/Diam_L2_k=2_D=2/: log.txt
experiment_logs/Diam_L2_k=3_D=2/: log.txt
experiment_logs/Radius_L2_k=1_D=2/: log.txt
experiment_logs/Radius_L2_k=2_D=2/: log.txt
utils/: CMakeLists.txt  data.cpp  data.h  math_utils.h  metrics.cpp  metrics.h
